# Skrift

./: .env.example  .gitignore  AUDIT-2026-02-15.md  README.md  app.dev.yaml  app.yaml  compose.yml  main.py  migrate_add_user_id.py  mkdocs.yml  pyproject.toml  pytest.ini  skrift-final.html  skrift-garden.html  skrift-paper.html
.claude/: CLAUDE.md
alembic/: env.py
app/: __init__.py  asgi.py
basesite/: __main__.py  asgi.py
design-playground/: skrift-editorial.html  skrift-ink.html  skrift-slate.html
docs/: README.md  css-framework.md  deployment.md  index.md
planning/: agent-implementation.md  worker-implementation.md
scripts/: run-integration-tests.sh
skrift/: __init__.py  alembic.ini  app_config.py  app_factory.py  asgi.py  cli.py  config.py
templates/: base.html  error-404.html  error-500.html  error.html  index.html  page.html  post.html
tests/: conftest.py  test_admin_controller.py  test_agents.py  test_app_config.py  test_asgi_dispatcher.py  test_auth_client_secret.py  test_auth_controller.py  test_auth_guards.py  test_auth_guards_client_ip.py  test_auth_oauth.py  test_auth_services.py  test_auth_session.py  test_bound_field.py  test_cli_db.py  test_config_file_option.py  test_csp_augmentation.py  test_db_request_cache.py  test_email_backends.py  test_email_link.py  test_exception_handlers.py  test_flash.py  test_form_core.py  test_form_decorator.py  test_form_model.py  test_hooks.py  test_markdown.py  test_media_admin_controller.py  test_middleware_client_ip.py  test_middleware_loading.py  test_migrations.py  test_notification_webhook.py  (+47 more)
(+483 files in other folders)
