[project]
name = "base-site"
version = "0.1.0"
description = "Litestar website with Google OAuth and WP-like templates"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litestar[standard,jinja,cryptography]>=2.14.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "advanced-alchemy>=0.26.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "uvicorn>=0.34.0",
    "pyyaml>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
